--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -3,3 +3,7 @@ required.default = 기본 오류 메시지
 range.item.price=가격은 {0} ~ {1} 까지 허용합니다.
 max.item.quantity=수량은 최대 {0} 까지 허용합니다.
 totalPriceMin=가격 * 수량의 합은 {0}원 이상이어야 합니다. 현재 값 = {1}
+
+required=필수 값 입니다.
+range= 범위 {0} ~ {1} 까지 허용합니다.
+max=최대 {0} 까지 허용합니다.
