--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -7,3 +7,4 @@ totalPriceMin=가격 * 수량의 합은 {0}원 이상이어야 합니다. 현재
 required=필수 값 입니다.
 range= 범위 {0} ~ {1} 까지 허용합니다.
 max=최대 {0} 까지 허용합니다.
+min=최소 {0} 이상 입니다.
